--- a/mainStyle.css
+++ b/mainStyle.css
@@ -1,6 +1,6 @@
 #gameArea {
   margin-left:      -8px;
-  height:           410px;
+  height:           390px;
   width:            fit-content;
   align-content:    center;
 }
@@ -10,8 +10,9 @@
   flex-direction:   column;
   width:            30px;
   height:           160px;
-  top:              100px;
-  right:            60px;
+  top:              6vw;
+  padding-top:      55px;
+  right:            80px;
   position:         absolute;
   justify-content:  space-between;
 }
@@ -26,17 +27,29 @@
 #blue {
   background-color: #75C5CA;
 }
+#blue:hover {
+  background-color: #64b0b6;
+}
 
 #green {
   background-color: #A8DFA6;
+}
+#green:hover {
+  background-color: #8ec98c;
 }
 
 #pink {
   background-color: #DFC1D7;
 }
+#pink:hover {
+  background-color: #c7a0bc;
+}
 
 #grey {
   background-color: #EAEAEA;
+}
+#grey:hover {
+  background-color: #d8d8d8;
 }
 
 #actionOptions {
@@ -91,9 +104,160 @@
   font-size:        larger;
   font-weight:      bolder;
   color:          white;
-  background-color: green;
+  background-color: grey;
 }
 
 #restart:hover {
   background-color: darkgreen;
+}
+
+#save {
+  display:          none;
+  border-style:     none;
+  border-radius:    5px;;
+  height:           50px;
+  width:            50%;
+  font-size:        larger;
+  font-weight:      bolder;
+  color:          white;
+  background-color: darkgray;
+  margin-top: 1em;
+}
+
+#save:hover {
+  background-color: darkcyan;
+}
+
+/* NAMING SECTION */
+#monsterName {
+  display: flex;
+  align-items: center;
+  margin-bottom: 0em;
+  margin-top: .5em;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 5%;
+  padding-right: 5%;
+  font-family: 'Krub', sans-serif;
+  font-weight: 700;
+  font-size: 3vw;
+}
+
+#monsterName > label {
+  width: 15em;
+  display: block;
+}
+
+#nameBox {
+  overflow: hidden;
+  display: block;
+  font-family: 'Krub', sans-serif;
+  font-weight: 400;
+  width: 100%;
+  height: 3vw;
+  font-size: 2.5vw;
+  border-color: #EAEAEA;
+  border-width: 5px;
+  border-style: dashed;
+  padding: .5vw;
+}
+#nameBox:hover {
+  border-color: #c2c2c2;
+}
+
+/* LOAD MONSTER */
+
+#load {
+  background-color:cadetblue;
+  color:            white;
+  font-weight: 700;
+  border-style: none;
+  border-radius: 10px;
+  padding-left: 2vw;
+  padding-right: 2vw;
+  font-size: 2.5vw;
+  height: 6vw;
+  margin-left: 4em;
+}
+#load:hover {
+  background-color:rgb(57, 122, 124);
+}
+
+#monsterContainer {
+  display: none;
+  top:              5vw;
+  padding-top:      50px;
+  left: 5%;
+  right: 120px;
+  height: 40em;
+  position: absolute;
+}
+
+#savedMonsters {
+  background-color: gray;
+  height: 100%;
+  font-family: 'Krub', sans-serif;
+  font-weight: 700;
+  font-size: 2vw;
+  padding: 1em;
+  border-radius: 10px;
+}
+
+#monsterHeader {
+  display: flex;
+  justify-content: space-between;
+}
+
+#savedMonsters > div > h2 {
+  margin-top: 0px;
+  color: white;
+  width: 80%;
+  display: inline;
+}
+
+#monsterHeader > input {
+  width: 2em;
+  height: 2em;
+  border-radius: 20px;
+  border-style: none;
+  background-color: rgb(131, 39, 39);
+  font-family: sans-serif;
+  font-weight: 700;
+  font-size: 2vw;
+  color: white;
+  margin-top: -.5em;
+  margin-right: -.5em;
+}
+
+#monsterContent {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  overflow-y: auto;
+  height: 85%;
+}
+
+/* MONSTER SEGMENTS */
+
+.monsterSegment {
+  display: inline-block;
+  background-color:#EAEAEA;
+  border-style: none;
+  border-radius: 20px;
+  padding: 1em;
+  height: 20em;
+  width: 16em;
+  margin: .5em;
+}
+
+.monsterSegment > h1 {
+  font-family: 'Krub', sans-serif;
+  font-weight: 700;
+  font-size: 1.5em;
+  margin-top: 0;
+}
+
+.monsterSegment > img {
+  max-width: 90%;
+  max-height: 10em;
 }
